--- a/components/pango_python/CMakeLists.txt
+++ b/components/pango_python/CMakeLists.txt
@@ -45,7 +45,12 @@ if(BUILD_PANGOLIN_PYTHON AND Python_FOUND AND pybind11_FOUND)
         ${COMPONENT} PRIVATE 
         ${CMAKE_CURRENT_LIST_DIR}/src/pyinterpreter.cpp
         ${CMAKE_CURRENT_LIST_DIR}/src/pypangolin_embed.cpp 
-        ${SRC_BINDINGS} 
+        ${SRC_BINDINGS}
+        
+        ${CMAKE_CURRENT_LIST_DIR}/include/pangolin/python/pyinterpreter.h
+    
+        CMakeLists.txt
+    
     )
 
     target_compile_definitions(${COMPONENT} PUBLIC HAVE_PYTHON)
