--- a/components/pango_tools/CMakeLists.txt
+++ b/components/pango_tools/CMakeLists.txt
@@ -3,6 +3,11 @@ get_filename_component(COMPONENT ${CMAKE_CURRENT_LIST_DIR} NAME)
 target_sources( ${COMPONENT}
 PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/src/video_viewer.cpp
+    
+    ${CMAKE_CURRENT_LIST_DIR}/include/pangolin/tools/video_viewer.h
+
+    CMakeLists.txt
+
 )
 
 target_link_libraries(${COMPONENT} PUBLIC pango_display pango_video)
